Replace recipe details' lists with table

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -45,27 +45,31 @@
           <h2>Description</h2>
           <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken.</p>
           <div class="recipe-details">
-            <ul>
-              <li>
-                <span>Level:</span>
-                <span>Medium</span>
-              </li></ul>
-            <ul>
-              <li>
-                <span>Total time:</span>
-                <span>40 minutes</span>
-              </li>
-              <li>
-                <span>Preparation time:</span>
-                <span>20 minutes</span>
-              </li>
-            </ul>
-            <ul>
-              <li>
-                <span>Yield:</span>
-                <span>6 servings</span>
-              </li>
-            </ul>
+            <table>
+              <caption>Recipe details for chicken enchiladas</caption>
+              <colgroup>
+                <col style="border-right: 1px solid #480a2463;">
+                <col>
+              </colgroup>
+              <tbody>
+                <tr>
+                  <th>Level</th>
+                  <td>Medium</td>
+                </tr>
+                <tr>
+                  <th>Total Time</th>
+                  <td>40 minutes</td>
+                </tr>
+                <tr>
+                  <th>Preparation Time</th>
+                  <td>20 minutes</td>
+                </tr>
+                <tr>
+                  <th>Yield</th>
+                  <td>6 servings</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </section>
