--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -45,28 +45,31 @@
           <h2>Description</h2>
           <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
           <div class="recipe-details">
-            <ul>
-              <li>
-                <span>Level:</span>
-                <span>Easy</span>
-              </li>
-            </ul>
-            <ul>
-              <li>
-                <span>Total time:</span>
-                <span>15 minutes</span>
-              </li>
-              <li>
-                <span>Preparation time:</span>
-                <span>5 minutes</span>
-              </li>
-            </ul>
-            <ul>
-              <li>
-                <span>Yield:</span>
-                <span>1 serving</span>
-              </li>
-            </ul>
+            <table>
+              <caption>Recipe details for orange chicken and asparagus</caption>
+              <colgroup>
+                <col style="border-right: 1px solid #480a2463;">
+                <col>
+              </colgroup>
+              <tbody>
+                <tr>
+                  <th scope="row">Level</th>
+                  <td>Easy</td>
+                </tr>
+                <tr>
+                  <th scope="row">Total Time</th>
+                  <td>15 minutes</td>
+                </tr>
+                <tr>
+                  <th scope="row">Preparation Time</th>
+                  <td>5 minutes</td>
+                </tr>
+                <tr>
+                  <th scope="row">Yield</th>
+                  <td>1 serving</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </section>
