--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -45,28 +45,31 @@
           <h2>Description</h2>
           <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
           <div class="recipe-details">
-            <ul>
-              <li>
-                <span>Level:</span>
-                <span>Easy</span>
-              </li>
-            </ul>
-            <ul>
-              <li>
-                <span>Total time:</span>
-                <span>5 minutes</span>
-              </li>
-              <li>
-                <span>Preparation time:</span>
-                <span>5 minutes</span>
-              </li>
-            </ul>
-            <ul>
-              <li>
-                <span>Yield:</span>
-                <span>1 serving</span>
-              </li>
-            </ul>
+            <table>
+              <caption>Recipe details for granola and yogurt bowl</caption>
+              <colgroup>
+                <col style="border-right: 1px solid #480a2463;">
+                <col>
+              </colgroup>
+              <tbody>
+                <tr>
+                  <th>Level</th>
+                  <td>Easy</td>
+                </tr>
+                <tr>
+                  <th>Total Time</th>
+                  <td>5 minutes</td>
+                </tr>
+                <tr>
+                  <th>Preparation Time</th>
+                  <td>5 minutes</td>
+                </tr>
+                <tr>
+                  <th>Yield</th>
+                  <td>1 serving</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </section>
