Add height and width attributes to images

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -41,7 +41,7 @@
       <h1>Chicken Enchiladas</h1>
       <section>
         <div class="description">
-          <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." width="350">
+          <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." height="350" width="350">
           <h2>Description</h2>
           <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken.</p>
           <div class="recipe-details">
