--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -73,7 +73,7 @@
           </div>
         </div>
       </section>
-      <div class="ingredients-and-steps">
+      <div class="orange-chicken ingredients-and-steps">
         <section>
           <h3>Ingredients</h3>
           <ul>
