Remove class from ingredients and steps containers

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -73,7 +73,7 @@
           </div>
         </div>
       </section>
-      <div class="yogurt ingredients-and-steps">
+      <div class="ingredients-and-steps">
         <section>
           <h3>Ingredients</h3>
           <ul>
