Remove div/span elements from list items

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -119,20 +119,16 @@
           <h3>Steps</h3>
           <ol>
             <li>
-              <span></span>
-              <div>Place the yogurt in a bowl.</div>
+              Place the yogurt in a bowl.
             </li>
             <li>
-              <span></span>
-              <div>Add the washed fruit.</div>
+              Add the washed fruit.
             </li>
             <li>
-              <span></span>
-              <div>Top with seeds, nuts, coconut, and granola.</div>
+              Top with seeds, nuts, coconut, and granola.
             </li>
             <li>
-              <span></span>
-              <div>Serve immediately.</div>
+              Serve immediately.
             </li>
           </ol>
         </section>
