--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -11,32 +11,24 @@
   </head>
   <body>
     <header>
-      <div>
-        <nav>
-          <button class="nav-button material-symbols-outlined" type="button" aria-owns="nav" aria-label="Open navigation">menu</button>
-          <ul class="accordion" id="nav">
-            <li>
-              <button class="more-recipes-button" type="button" aria-label="Open more recipes section" aria-expanded="false" aria-owns="recipes">
-                More Recipes
-                <span class="material-symbols-outlined" aria-hidden="true">add</span>
-              </button>
-              <ul class="more-recipes-list" id="recipes">
-                <li>
-                  <a href="../recipes/orange-chicken.html">Orange Chicken & Asparagus</a>
-                </li>
-                <li>
-                  <a href="../recipes/yogurt.html">Yogurt & Granola Bowl</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a class="github-link" href="https://github.com/t4rantino/odin-recipes">Created by t4rantino</a>
-            </li>
-          </ul>
-        </nav>
-        <a class="logo" href="../index.html">Odin Recipes</a>
-      </div>
+      <a class="logo" href="../index.html">Odin Recipes</a>
     </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="../recipes/orange-chicken.html" aria-label="Previous recipe">
+            <span class="material-symbols-outlined" aria-hidden="true">chevron_left</span>
+            Previous Recipe
+          </a>
+        </li>
+        <li>
+          <a href="../recipes/yogurt.html" aria-label="Next recipe">
+            Next Recipe
+            <span class="material-symbols-outlined" aria-hidden="true">chevron_right</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <h1>Chicken Enchiladas</h1>
       <section>
