--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -11,7 +11,10 @@
   </head>
   <body>
     <header>
-      <a class="logo" href="../index.html">Odin Recipes</a>
+      <a class="logo" href="../index.html">
+        <img src="../img/spoon.png" alt="" height="34.8" width="25">
+        Odin Recipes
+      </a>
     </header>
     <nav>
       <ul>
