Fix list item text

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -121,7 +121,7 @@
               Heat sesame oil in a large skillet. Saut&eacute; sliced chicken, garlic, and red pepper flakes for about 7 minutes. Add chopped asparagus and cook for an additional 3 minutes.
             </li>
             <li>
-              In a small bowl, whisk together soy sauce, honey, sesame seeds, and juice and zest of 1 orange. Add to skillet and cook for 1 min. Serve plain or over rice of your choice.
+              In a small bowl, whisk together soy sauce, honey, sesame seeds, and juice and zest of 1 orange. Add to skillet and cook for 1 minute. Serve plain or over rice of your choice.
             </li>
           </ol>
         </section>
