Add skip link to document

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -10,6 +10,7 @@
     <title>Orange Chicken & Asparagus Recipe</title>
   </head>
   <body>
+    <a class="skip-link" href="#orange-chicken-and-asparagus">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
         <img src="../img/spoon.png" alt="" height="32" width="28">
@@ -32,7 +33,7 @@
         </li>
       </ul>
     </nav>
-    <main>
+    <main id="orange-chicken-and-asparagus">
       <h1>Orange Chicken & Asparagus</h1>
       <section>
         <div class="description">
