--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -10,6 +10,7 @@
     <title>Chicken Enchiladas Recipe</title>
   </head>
   <body>
+    <a class="skip-link" href="#chicken-enchiladas">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
         <img src="../img/spoon.png" alt="" height="32" width="28">
@@ -32,7 +33,7 @@
         </li>
       </ul>
     </nav>
-    <main>
+    <main id="chicken-enchiladas">
       <h1>Chicken Enchiladas</h1>
       <section>
         <div class="description">
