--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -10,6 +10,7 @@
     <title>Granola & Yogurt Bowl Recipe</title>
   </head>
   <body>
+    <a class="skip-link" href="#granola-and-yogurt-bowl">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
         <img src="../img/spoon.png" alt="" height="32" width="28">
@@ -32,7 +33,7 @@
         </li>
       </ul>
     </nav>
-    <main>
+    <main id="granola-and-yogurt-bowl">
       <h1>Granola & Yogurt Bowl</h1>
       <section>
         <div class="description">
