Add github link and new header icon to document

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -13,7 +13,7 @@
     <a class="skip-link" href="#chicken-enchiladas">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
-        <img src="../img/spoon.png" alt="" height="32" width="28">
+        <img src="../img/chef-hat.png" alt="" height="30" width="38">
         Odin Recipes
       </a>
     </header>
@@ -142,7 +142,10 @@
       </div>
     </main>
     <footer>
-      <p>Recipe from <a href="https://www.myfoodandfamily.com/recipe/122135/chicken-enchiladas-supreme">My Food and Family</a></p>
+      <p>Recipe from <a class="recipe-credit" href="https://www.myfoodandfamily.com/recipe/122135/chicken-enchiladas-supreme">My Food and Family</a></p>
+      <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
+        <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
+      </a>
     </footer>
     <!-- <h1>Enchiladas</h1>
     <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese.">
