--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -13,7 +13,7 @@
     <a class="skip-link" href="#orange-chicken-and-asparagus">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
-        <img src="../img/spoon.png" alt="" height="32" width="28">
+        <img src="../img/chef-hat.png" alt="" height="30" width="38">
         Odin Recipes
       </a>
     </header>
@@ -129,7 +129,10 @@
       </div>
     </main>
     <footer>
-      <p>Recipe from <a href="https://lilluna.com/orange-chicken-and-asparagus/#wprm-recipe-container-109651">Lil' Luna</a></p>
+      <p>Recipe from <a class="recipe-credit" href="https://lilluna.com/orange-chicken-and-asparagus/#wprm-recipe-container-109651">Lil' Luna</a></p>
+      <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
+        <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
+      </a>
     </footer>
     <!-- <h1>Orange Chicken and Asparagus</h1>
     <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice.">
