--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -13,7 +13,7 @@
     <a class="skip-link" href="#granola-and-yogurt-bowl">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
-        <img src="../img/spoon.png" alt="" height="32" width="28">
+        <img src="../img/chef-hat.png" alt="" height="30" width="38">
         Odin Recipes
       </a>
     </header>
@@ -131,7 +131,10 @@
       </div>
     </main>
     <footer>
-      <p>Recipe from <a href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
+      <p>Recipe from <a class="recipe-credit" href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
+      <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
+        <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
+      </a>
     </footer>
     <!-- <h1>Yogurt Medley</h1>
     <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl.">
