Change header icon (final)

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -13,7 +13,7 @@
     <a class="skip-link" href="#orange-chicken-and-asparagus">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
-        <img src="../img/chef-hat.png" alt="" height="30" width="38">
+        <img src="../img/recipe-and-spoon.png" alt="" height="38" width="45">
         Odin Recipes
       </a>
     </header>
