--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -13,7 +13,7 @@
     <a class="skip-link" href="#granola-and-yogurt-bowl">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
-        <img src="../img/chef-hat.png" alt="" height="30" width="38">
+        <img src="../img/recipe-and-spoon.png" alt="" height="30" width="35">
         Odin Recipes
       </a>
     </header>
