--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>Odin Recipes</h1>
     <h2>Find a Recipe</h2>
     <ul>
-      <li><a href="recipes/yogurt-medley.html">Yogurt Medley</a></li>
+      <li><a href="recipes/yogurt.html">Yogurt Medley</a></li>
       <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
-      <li><a href="recipes/orange-chicken-asparagus.html">Orange Chicken and Asparagus</a></li>
+      <li><a href="recipes/orange-chicken.html">Orange Chicken and Asparagus</a></li>
     </ul>
   </body>
 </html>
