Change header icon and add favicon to pages - I am NOT changing the icon again. Seriously.

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../css/enchiladas.css">
     <link rel="stylesheet" href="../css/recipes.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
+    <link rel="icon" type="image/x-icon" href="../img/hat-and-spoon.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Chicken Enchiladas Recipe</title>
@@ -13,7 +14,7 @@
     <a class="skip-link" href="#chicken-enchiladas">Skip To Main Content</a>
     <header>
       <a class="logo" href="../index.html">
-        <img src="../img/recipe-and-spoon.png" alt="" height="30" width="35">
+        <img src="../img/hat-and-spoon.png" alt="" height="36" width="42">
         Odin Recipes
       </a>
     </header>
