--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../css/yogurt.css">
     <link rel="stylesheet" href="../css/recipes.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
-    <link rel="icon" type="image/x-icon" href="../img/hat-and-spoon.png">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Granola & Yogurt Bowl Recipe</title>
@@ -45,7 +45,7 @@
             <table>
               <caption>Recipe details for granola and yogurt bowl</caption>
               <colgroup>
-                <col style="border-right: 1px solid #480a2463;">
+                <col style="border-right: 1px solid #42240b63;">
                 <col>
               </colgroup>
               <tbody>
