Add headings to header and nav

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -13,12 +13,15 @@
   <body>
     <a class="skip-link" href="#chicken-enchiladas">Skip To Main Content</a>
     <header>
-      <a class="logo" href="../index.html">
-        <img src="../img/hat-and-spoon.png" alt="" height="36" width="42">
-        Odin Recipes
-      </a>
+      <h1>
+        <a href="../index.html">
+          <img src="../img/hat-and-spoon.png" alt="" height="36" width="42">
+          Odin Recipes
+        </a>
+      </h1>
     </header>
     <nav>
+      <h2>More Recipes</h2>
       <ul>
         <li>
           <a href="../recipes/orange-chicken.html" aria-label="Previous recipe">
