--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -14,10 +14,7 @@
     <a class="skip-link" href="#chicken-enchiladas">Skip To Main Content</a>
     <header>
       <h1>
-        <a href="../index.html">
-          <img src="../img/hat-and-spoon.png" alt="" height="36" width="42">
-          Odin Recipes
-        </a>
+        <a href="../index.html">Odin Recipes</a>
       </h1>
     </header>
     <nav>
