Add metadata to document

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
+    <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/home-style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito|Roboto">
-    <title>Odin Recipes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home - Odin Recipes</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
