Separate general and specific styles across site A new script file was created for the recipe pages because they have a header and navigation. The home page will have a script file for its header only.

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/orange-chicken.css">
+    <link rel="stylesheet" href="../css/general-styles.css">
     <link rel="stylesheet" href="../css/recipes.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -162,6 +161,6 @@
     </ol>
 
     <a href="../index.html">Return to Odin Recipes</a> -->
-    <script src="../js/script.js"></script>
+    <script src="../js/recipes.js"></script>
   </body>
 </html>
