Add script file to home page

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
       <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
       <li><a href="recipes/orange-chicken.html">Orange Chicken and Asparagus</a></li>
     </ul>
+    <script src="js/home.js"></script>
   </body>
 </html>
