--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <title>Home - Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
+    <header>
+      <h1>
+        <a href="index.html">Odin Recipes</a>
+      </h1>
+    </header>
     <h2>Find a Recipe</h2>
     <ul>
       <li><a href="recipes/yogurt.html">Yogurt Medley</a></li>
