--- a/index.html
+++ b/index.html
@@ -15,12 +15,21 @@
         <a href="index.html">Odin Recipes</a>
       </h1>
     </header>
-    <h2>Find a Recipe</h2>
-    <ul>
-      <li><a href="recipes/yogurt.html">Yogurt Medley</a></li>
-      <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
-      <li><a href="recipes/orange-chicken.html">Orange Chicken and Asparagus</a></li>
-    </ul>
+    <main>
+      <h2>Find a Recipe</h2>
+      <ul>
+        <li><a href="recipes/yogurt.html">Yogurt Medley</a></li>
+        <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
+        <li><a href="recipes/orange-chicken.html">Orange Chicken and Asparagus</a></li>
+      </ul>
+    </main>
+    <footer>
+      <div>
+        <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
+          <img src="img/github-icon.svg" alt="GitHub" height="32" width="32">
+        </a>
+      </div>
+    </footer>
     <script src="js/home.js"></script>
   </body>
 </html>
