Remove headings from header and nav I didn't think I was using them correctly for this project.

--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -12,12 +12,11 @@
   <body>
     <a class="skip-link" href="#orange-chicken-and-asparagus">Skip To Main Content</a>
     <header>
-      <h1>
+      <div>
         <a href="../index.html">Odin Recipes</a>
-      </h1>
+      </div>
     </header>
     <nav>
-      <h2>More Recipes</h2>
       <ul>
         <li>
           <a href="../recipes/yogurt.html" aria-label="Previous recipe">
