--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <header>
-      <h1>
+      <div>
         <a href="index.html">Odin Recipes</a>
-      </h1>
+      </div>
     </header>
     <main>
-      <h2>Find a Recipe</h2>
+      <h1>Find a Recipe</h1>
       <ul>
         <li><a href="recipes/yogurt.html">Yogurt Medley</a></li>
         <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
