--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -12,12 +12,11 @@
   <body>
     <a class="skip-link" href="#chicken-enchiladas">Skip To Main Content</a>
     <header>
-      <h1>
+      <div>
         <a href="../index.html">Odin Recipes</a>
-      </h1>
+      </div>
     </header>
     <nav>
-      <h2>More Recipes</h2>
       <ul>
         <li>
           <a href="../recipes/orange-chicken.html" aria-label="Previous recipe">
