--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <a class="skip-link" href="#orange-chicken-and-asparagus">Skip To Main Content</a>
-    <header>
+    <header class="header-logo">
       <div>
         <a href="../index.html">Odin Recipes</a>
       </div>
