--- a/index.html
+++ b/index.html
@@ -11,8 +11,19 @@
   </head>
   <body>
     <header>
-      <div>
-        <a href="index.html">Odin Recipes</a>
+      <div class="header-logo">
+        <div>
+          <a href="index.html">Odin Recipes</a>
+        </div>
+      </div>
+      <div class="hero">
+        <div class="hero-text">
+          <h1>Welcome to Odin Recipes</h1>
+          <p>Your favorite recipes &ndash; all in one place. Let's start cooking!</p>
+        </div>
+        <div class="hero-image">
+          <img src="img/hat-and-spoon.png" alt="" height="120" width="140">
+        </div>
       </div>
     </header>
     <main>
