Fix hero text's punctuation

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="hero">
         <div class="hero-text">
           <h1>Welcome to Odin Recipes</h1>
-          <p>Your favorite recipes &ndash; all in one place. Let's start cooking!</p>
+          <p>Your favorite recipes &mdash; all in one place. Let's start cooking!</p>
         </div>
         <div class="hero-image">
           <img src="img/hat-and-spoon.png" alt="" height="120" width="140">
