Add span to hero text's h1

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </div>
       <div class="hero">
         <div class="hero-text">
-          <h1>Welcome to Odin Recipes</h1>
+          <h1>Welcome to <span>Odin Recipes</span></h1>
           <p>Your favorite recipes &mdash; all in one place. Let's start cooking!</p>
         </div>
         <div class="hero-image">
