Remove div from description section

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -34,38 +34,36 @@
     </nav>
     <main id="chicken-enchiladas">
       <h1>Chicken Enchiladas</h1>
-      <section>
-        <div class="description">
-          <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." height="350" width="350">
-          <h2>Description</h2>
-          <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken.</p>
-          <div class="recipe-details">
-            <table>
-              <caption>Recipe details for chicken enchiladas</caption>
-              <colgroup>
-                <col style="border-right: 1px solid #42240b63;">
-                <col>
-              </colgroup>
-              <tbody>
-                <tr>
-                  <th>Level</th>
-                  <td>Medium</td>
-                </tr>
-                <tr>
-                  <th>Total Time</th>
-                  <td>40 minutes</td>
-                </tr>
-                <tr>
-                  <th>Preparation Time</th>
-                  <td>20 minutes</td>
-                </tr>
-                <tr>
-                  <th>Yield</th>
-                  <td>6 servings</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+      <section class="description">
+        <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." height="350" width="350">
+        <h2>Description</h2>
+        <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken.</p>
+        <div class="recipe-details">
+          <table>
+            <caption>Recipe details for chicken enchiladas</caption>
+            <colgroup>
+              <col style="border-right: 1px solid #42240b63;">
+              <col>
+            </colgroup>
+            <tbody>
+              <tr>
+                <th>Level</th>
+                <td>Medium</td>
+              </tr>
+              <tr>
+                <th>Total Time</th>
+                <td>40 minutes</td>
+              </tr>
+              <tr>
+                <th>Preparation Time</th>
+                <td>20 minutes</td>
+              </tr>
+              <tr>
+                <th>Yield</th>
+                <td>6 servings</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </section>
       <div class="ingredients-and-steps">
