--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -34,38 +34,36 @@
     </nav>
     <main id="orange-chicken-and-asparagus">
       <h1>Orange Chicken & Asparagus</h1>
-      <section>
-        <div class="description">
-          <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="350" width="350">
-          <h2>Description</h2>
-          <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
-          <div class="recipe-details">
-            <table>
-              <caption>Recipe details for orange chicken and asparagus</caption>
-              <colgroup>
-                <col style="border-right: 1px solid #42240b63;">
-                <col>
-              </colgroup>
-              <tbody>
-                <tr>
-                  <th scope="row">Level</th>
-                  <td>Easy</td>
-                </tr>
-                <tr>
-                  <th scope="row">Total Time</th>
-                  <td>15 minutes</td>
-                </tr>
-                <tr>
-                  <th scope="row">Preparation Time</th>
-                  <td>5 minutes</td>
-                </tr>
-                <tr>
-                  <th scope="row">Yield</th>
-                  <td>1 serving</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+      <section class="description">
+        <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="350" width="350">
+        <h2>Description</h2>
+        <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
+        <div class="recipe-details">
+          <table>
+            <caption>Recipe details for orange chicken and asparagus</caption>
+            <colgroup>
+              <col style="border-right: 1px solid #42240b63;">
+              <col>
+            </colgroup>
+            <tbody>
+              <tr>
+                <th scope="row">Level</th>
+                <td>Easy</td>
+              </tr>
+              <tr>
+                <th scope="row">Total Time</th>
+                <td>15 minutes</td>
+              </tr>
+              <tr>
+                <th scope="row">Preparation Time</th>
+                <td>5 minutes</td>
+              </tr>
+              <tr>
+                <th scope="row">Yield</th>
+                <td>1 serving</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </section>
       <div class="ingredients-and-steps">
