--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -34,38 +34,36 @@
     </nav>
     <main id="granola-and-yogurt-bowl">
       <h1>Granola & Yogurt Bowl</h1>
-      <section>
-        <div class="description">
-          <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="350" width="350">
-          <h2>Description</h2>
-          <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
-          <div class="recipe-details">
-            <table>
-              <caption>Recipe details for granola and yogurt bowl</caption>
-              <colgroup>
-                <col style="border-right: 1px solid #42240b63;">
-                <col>
-              </colgroup>
-              <tbody>
-                <tr>
-                  <th>Level</th>
-                  <td>Easy</td>
-                </tr>
-                <tr>
-                  <th>Total Time</th>
-                  <td>5 minutes</td>
-                </tr>
-                <tr>
-                  <th>Preparation Time</th>
-                  <td>5 minutes</td>
-                </tr>
-                <tr>
-                  <th>Yield</th>
-                  <td>1 serving</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+      <section class="description">
+        <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="350" width="350">
+        <h2>Description</h2>
+        <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
+        <div class="recipe-details">
+          <table>
+            <caption>Recipe details for granola and yogurt bowl</caption>
+            <colgroup>
+              <col style="border-right: 1px solid #42240b63;">
+              <col>
+            </colgroup>
+            <tbody>
+              <tr>
+                <th>Level</th>
+                <td>Easy</td>
+              </tr>
+              <tr>
+                <th>Total Time</th>
+                <td>5 minutes</td>
+              </tr>
+              <tr>
+                <th>Preparation Time</th>
+                <td>5 minutes</td>
+              </tr>
+              <tr>
+                <th>Yield</th>
+                <td>1 serving</td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </section>
       <div class="ingredients-and-steps">
