Redesign main content

--- a/index.html
+++ b/index.html
@@ -27,12 +27,35 @@
       </div>
     </header>
     <main>
-      <h2>Find a Recipe</h2>
-      <ul>
-        <li><a href="recipes/yogurt.html">Yogurt Medley</a></li>
-        <li><a href="recipes/enchiladas.html">Enchiladas</a></li>
-        <li><a href="recipes/orange-chicken.html">Orange Chicken and Asparagus</a></li>
-      </ul>
+      <section class="recipes">
+        <div>
+          <h2>Find a Recipe</h2>
+          <article>
+            <img src="img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." height="250" width="250">
+            <h3>Chicken Enchiladas</h3>
+            <p>
+              Special extra: serve topped with chopped fresh cilantro or shredded lettuce, and chopped tomatoes.
+            </p>
+            <a href="recipes/enchiladas.html">Go to recipe</a>
+          </article>
+          <article>
+            <img src="img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="250" width="250">
+            <h3>Granola & Yogurt Bowl</h3>
+            <p>
+              This bowl provides vitamins, calcium, protein, healthy carbs, and healthy fats that our bodies need daily.
+            </p>
+            <a href="recipes/yogurt.html">Go to recipe</a>
+          </article>
+          <article>
+            <img src="img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="250" width="250">
+            <h3>Orange Chicken & Asparagus</h3>
+            <p>
+              Did I mention it's a one-pot meal?! Yep, one pot (as if this recipe couldn't get any better).
+            </p>
+            <a href="recipes/orange-chicken.html">Go to recipe</a>
+          </article>
+        </div>
+      </section>
     </main>
     <footer>
       <div>
