Place main content in article

--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -33,99 +33,101 @@
       </ul>
     </nav>
     <main id="granola-and-yogurt-bowl">
-      <h1>Granola & Yogurt Bowl</h1>
-      <section class="description">
-        <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="350" width="350">
-        <h2>Description</h2>
-        <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
-        <div class="recipe-details">
-          <table>
-            <caption>Recipe details for granola and yogurt bowl</caption>
-            <colgroup>
-              <col style="border-right: 1px solid #42240b63;">
-              <col>
-            </colgroup>
-            <tbody>
-              <tr>
-                <th>Level</th>
-                <td>Easy</td>
-              </tr>
-              <tr>
-                <th>Total Time</th>
-                <td>5 minutes</td>
-              </tr>
-              <tr>
-                <th>Preparation Time</th>
-                <td>5 minutes</td>
-              </tr>
-              <tr>
-                <th>Yield</th>
-                <td>1 serving</td>
-              </tr>
-            </tbody>
-          </table>
+      <article>
+        <h1>Granola & Yogurt Bowl</h1>
+        <section class="description">
+          <img src="../img/yogurt-medley.jpg" alt="Mix of granola, blueberries, raspberries, cantaloupe, goji berries, pumpkin seeds, coconut shavings, and yogurt in a bowl." height="350" width="350">
+          <h2>Description</h2>
+          <p>Because every morning needs to start off with a bang! And this granola and yogurt bowl does just that. So yummy, so delicious, and you can make it in a jiffy!</p>
+          <div class="recipe-details">
+            <table>
+              <caption>Recipe details for granola and yogurt bowl</caption>
+              <colgroup>
+                <col style="border-right: 1px solid #42240b63;">
+                <col>
+              </colgroup>
+              <tbody>
+                <tr>
+                  <th>Level</th>
+                  <td>Easy</td>
+                </tr>
+                <tr>
+                  <th>Total Time</th>
+                  <td>5 minutes</td>
+                </tr>
+                <tr>
+                  <th>Preparation Time</th>
+                  <td>5 minutes</td>
+                </tr>
+                <tr>
+                  <th>Yield</th>
+                  <td>1 serving</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+        <div class="ingredients-and-steps">
+          <section>
+            <h3>Ingredients</h3>
+            <ul>
+              <li>
+                <input type="checkbox" id="yogurt">
+                <label for="yogurt">&frac12; cup plain greek yogurt</label>
+              </li>
+              <li>
+                <input type="checkbox" id="blueberries">
+                <label for="blueberries">&frac14; cup blueberries</label>
+              </li>
+              <li>
+                <input type="checkbox" id="raspberries">
+                <label for="raspberries">&frac14; cup raspberries</label>
+              </li>
+              <li>
+                <input type="checkbox" id="cantaloupe">
+                <label for="cantaloupe">&frac12; cup cantaloupe</label>
+              </li>
+              <li>
+                <input type="checkbox" id="goji">
+                <label for="goji">&frac12; Tbsp. goji berries</label>
+              </li>
+              <li>
+                <input type="checkbox" id="pumpkin">
+                <label for="pumpkin">&frac12; Tbsp. pumpkin seeds</label>
+              </li>
+              <li>
+                <input type="checkbox" id="almonds">
+                <label for="almonds">&frac12; Tbsp. slices almonds</label>
+              </li>
+              <li>
+                <input type="checkbox" id="coconut">
+                <label for="coconut">&frac12; Tbsp. coconut shavings</label>
+              </li>
+              <li>
+                <input type="checkbox" id="granola">
+                <label for="granola">&frac14; cup granola</label>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h3>Steps</h3>
+            <ol>
+              <li>
+                Place the yogurt in a bowl.
+              </li>
+              <li>
+                Add the washed fruit.
+              </li>
+              <li>
+                Top with seeds, nuts, coconut, and granola.
+              </li>
+              <li>
+                Serve immediately.
+              </li>
+            </ol>
+          </section>
         </div>
-      </section>
-      <div class="ingredients-and-steps">
-        <section>
-          <h3>Ingredients</h3>
-          <ul>
-            <li>
-              <input type="checkbox" id="yogurt">
-              <label for="yogurt">&frac12; cup plain greek yogurt</label>
-            </li>
-            <li>
-              <input type="checkbox" id="blueberries">
-              <label for="blueberries">&frac14; cup blueberries</label>
-            </li>
-            <li>
-              <input type="checkbox" id="raspberries">
-              <label for="raspberries">&frac14; cup raspberries</label>
-            </li>
-            <li>
-              <input type="checkbox" id="cantaloupe">
-              <label for="cantaloupe">&frac12; cup cantaloupe</label>
-            </li>
-            <li>
-              <input type="checkbox" id="goji">
-              <label for="goji">&frac12; Tbsp. goji berries</label>
-            </li>
-            <li>
-              <input type="checkbox" id="pumpkin">
-              <label for="pumpkin">&frac12; Tbsp. pumpkin seeds</label>
-            </li>
-            <li>
-              <input type="checkbox" id="almonds">
-              <label for="almonds">&frac12; Tbsp. slices almonds</label>
-            </li>
-            <li>
-              <input type="checkbox" id="coconut">
-              <label for="coconut">&frac12; Tbsp. coconut shavings</label>
-            </li>
-            <li>
-              <input type="checkbox" id="granola">
-              <label for="granola">&frac14; cup granola</label>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h3>Steps</h3>
-          <ol>
-            <li>
-              Place the yogurt in a bowl.
-            </li>
-            <li>
-              Add the washed fruit.
-            </li>
-            <li>
-              Top with seeds, nuts, coconut, and granola.
-            </li>
-            <li>
-              Serve immediately.
-            </li>
-          </ol>
-        </section>
-      </div>
+      </article>
     </main>
     <footer>
       <p>Recipe from <a class="recipe-credit" href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
