--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -33,110 +33,112 @@
       </ul>
     </nav>
     <main id="chicken-enchiladas">
-      <h1>Chicken Enchiladas</h1>
-      <section class="description">
-        <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." height="350" width="350">
-        <h2>Description</h2>
-        <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken.</p>
-        <div class="recipe-details">
-          <table>
-            <caption>Recipe details for chicken enchiladas</caption>
-            <colgroup>
-              <col style="border-right: 1px solid #42240b63;">
-              <col>
-            </colgroup>
-            <tbody>
-              <tr>
-                <th>Level</th>
-                <td>Medium</td>
-              </tr>
-              <tr>
-                <th>Total Time</th>
-                <td>40 minutes</td>
-              </tr>
-              <tr>
-                <th>Preparation Time</th>
-                <td>20 minutes</td>
-              </tr>
-              <tr>
-                <th>Yield</th>
-                <td>6 servings</td>
-              </tr>
-            </tbody>
-          </table>
+      <article>
+        <h1>Chicken Enchiladas</h1>
+        <section class="description">
+          <img src="../img/chicken-enchiladas-supreme.jpg" alt="Two enchiladas topped with shredded cheddar cheese and cream cheese." height="350" width="350">
+          <h2>Description</h2>
+          <p>Discover chicken enchiladas, a recipe that features cream cheese, lots of delicious herbs and spices and saucy chicken.</p>
+          <div class="recipe-details">
+            <table>
+              <caption>Recipe details for chicken enchiladas</caption>
+              <colgroup>
+                <col style="border-right: 1px solid #42240b63;">
+                <col>
+              </colgroup>
+              <tbody>
+                <tr>
+                  <th>Level</th>
+                  <td>Medium</td>
+                </tr>
+                <tr>
+                  <th>Total Time</th>
+                  <td>40 minutes</td>
+                </tr>
+                <tr>
+                  <th>Preparation Time</th>
+                  <td>20 minutes</td>
+                </tr>
+                <tr>
+                  <th>Yield</th>
+                  <td>6 servings</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+        <div class="ingredients-and-steps">
+          <section>
+            <h3>Ingredients</h3>
+            <ul>
+              <li>
+                <input type="checkbox" id="cream">
+                <label for="cream">1 tub (8 oz.) PHILADELPHIA Cream Cheese Spread</label>
+              </li>
+              <li>
+                <input type="checkbox" id="milk">
+                <label for="milk">3 Tbsp. milk</label>
+              </li>
+              <li>
+                <input type="checkbox" id="garlic-powder">
+                <label for="garlic-powder">1 tsp. garlic powder</label>
+              </li>
+              <li>
+                <input type="checkbox" id="oil">
+                <label for="oil">2 tsp. oil</label>
+              </li>
+              <li>
+                <input type="checkbox" id="peppers">
+                <label for="peppers">1 cup green peppers, chopped</label>
+              </li>
+              <li>
+                <input type="checkbox" id="onions">
+                <label for="onions">1 cup onions, chopped</label>
+              </li>
+              <li>
+                <input type="checkbox" id="minced-garlic">
+                <label for="minced-garlic">2 cloves garlic, minced</label>
+              </li>
+              <li>
+                <input type="checkbox" id="chicken">
+                <label for="chicken">2 &frac12; cups cooked chicken, chopped</label>
+              </li>
+              <li>
+                <input type="checkbox" id="cheese">
+                <label for="cheese">1 &frac12; cups KRAFT Mexican-Style Four-Cheese Shredded Cheese</label>
+              </li>
+              <li>
+                <input type="checkbox" id="sauce">
+                <label for="sauce">2 cans (10 oz. each) red enchilada sauce</label>
+              </li>
+              <li>
+                <input type="checkbox" id="tortillas">
+                <label for="tortillas">12 corn tortillas (6 in.), warmed</label>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h3>Steps</h3>
+            <ol>
+              <li>
+                Heat oven to 350&deg;F.
+              </li>
+              <li>
+                Mix cream cheese spread, 2 Tbsp. milk and garlic powder until blended.
+              </li>
+              <li>
+                Heat oil in large skillet on medium heat. Add peppers, onions and garlic; cook and stir 5 to 6 minutes, or until crisp-tender. Stir in chicken, &frac34; cup each cream cheese mixture and shredded cheese, and &frac14; cup enchilada sauce.
+              </li>
+              <li>
+                Dip 1 tortilla in remaining enchilada sauce; gently shake off excess sauce. Spoon &frac14; cup chicken mixture down center of tortilla; roll up. Place, seam side down, in 13-by-9-in. baking dish sprayed with cooking spray. Repeat with remaining tortillas and filling; cover with remaining sauce.
+              </li>
+              <li>
+                Bake 20 minutes. Top with remaining shredded cheese; bake 5 minutes. Mix remaining cream cheese mixture and remaining milk; spoon over enchiladas.
+              </li>
+            </ol>
+          </section>
         </div>
-      </section>
-      <div class="ingredients-and-steps">
-        <section>
-          <h3>Ingredients</h3>
-          <ul>
-            <li>
-              <input type="checkbox" id="cream">
-              <label for="cream">1 tub (8 oz.) PHILADELPHIA Cream Cheese Spread</label>
-            </li>
-            <li>
-              <input type="checkbox" id="milk">
-              <label for="milk">3 Tbsp. milk</label>
-            </li>
-            <li>
-              <input type="checkbox" id="garlic-powder">
-              <label for="garlic-powder">1 tsp. garlic powder</label>
-            </li>
-            <li>
-              <input type="checkbox" id="oil">
-              <label for="oil">2 tsp. oil</label>
-            </li>
-            <li>
-              <input type="checkbox" id="peppers">
-              <label for="peppers">1 cup green peppers, chopped</label>
-            </li>
-            <li>
-              <input type="checkbox" id="onions">
-              <label for="onions">1 cup onions, chopped</label>
-            </li>
-            <li>
-              <input type="checkbox" id="minced-garlic">
-              <label for="minced-garlic">2 cloves garlic, minced</label>
-            </li>
-            <li>
-              <input type="checkbox" id="chicken">
-              <label for="chicken">2 &frac12; cups cooked chicken, chopped</label>
-            </li>
-            <li>
-              <input type="checkbox" id="cheese">
-              <label for="cheese">1 &frac12; cups KRAFT Mexican-Style Four-Cheese Shredded Cheese</label>
-            </li>
-            <li>
-              <input type="checkbox" id="sauce">
-              <label for="sauce">2 cans (10 oz. each) red enchilada sauce</label>
-            </li>
-            <li>
-              <input type="checkbox" id="tortillas">
-              <label for="tortillas">12 corn tortillas (6 in.), warmed</label>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h3>Steps</h3>
-          <ol>
-            <li>
-              Heat oven to 350&deg;F.
-            </li>
-            <li>
-              Mix cream cheese spread, 2 Tbsp. milk and garlic powder until blended.
-            </li>
-            <li>
-              Heat oil in large skillet on medium heat. Add peppers, onions and garlic; cook and stir 5 to 6 minutes, or until crisp-tender. Stir in chicken, &frac34; cup each cream cheese mixture and shredded cheese, and &frac14; cup enchilada sauce.
-            </li>
-            <li>
-              Dip 1 tortilla in remaining enchilada sauce; gently shake off excess sauce. Spoon &frac14; cup chicken mixture down center of tortilla; roll up. Place, seam side down, in 13-by-9-in. baking dish sprayed with cooking spray. Repeat with remaining tortillas and filling; cover with remaining sauce.
-            </li>
-            <li>
-              Bake 20 minutes. Top with remaining shredded cheese; bake 5 minutes. Mix remaining cream cheese mixture and remaining milk; spoon over enchiladas.
-            </li>      
-          </ol>
-        </section>
-      </div>
+      </article>
     </main>
     <footer>
       <p>Recipe from <a class="recipe-credit" href="https://www.myfoodandfamily.com/recipe/122135/chicken-enchiladas-supreme">My Food and Family</a></p>
