--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -33,97 +33,99 @@
       </ul>
     </nav>
     <main id="orange-chicken-and-asparagus">
-      <h1>Orange Chicken & Asparagus</h1>
-      <section class="description">
-        <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="350" width="350">
-        <h2>Description</h2>
-        <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
-        <div class="recipe-details">
-          <table>
-            <caption>Recipe details for orange chicken and asparagus</caption>
-            <colgroup>
-              <col style="border-right: 1px solid #42240b63;">
-              <col>
-            </colgroup>
-            <tbody>
-              <tr>
-                <th scope="row">Level</th>
-                <td>Easy</td>
-              </tr>
-              <tr>
-                <th scope="row">Total Time</th>
-                <td>15 minutes</td>
-              </tr>
-              <tr>
-                <th scope="row">Preparation Time</th>
-                <td>5 minutes</td>
-              </tr>
-              <tr>
-                <th scope="row">Yield</th>
-                <td>1 serving</td>
-              </tr>
-            </tbody>
-          </table>
+      <article>
+        <h1>Orange Chicken & Asparagus</h1>
+        <section class="description">
+          <img src="../img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="350" width="350">
+          <h2>Description</h2>
+          <p>For a healthier alternative to a favorite Chinese dish, try orange chicken and asparagus. Serve over rice or noodles, or enjoy on its own!</p>
+          <div class="recipe-details">
+            <table>
+              <caption>Recipe details for orange chicken and asparagus</caption>
+              <colgroup>
+                <col style="border-right: 1px solid #42240b63;">
+                <col>
+              </colgroup>
+              <tbody>
+                <tr>
+                  <th scope="row">Level</th>
+                  <td>Easy</td>
+                </tr>
+                <tr>
+                  <th scope="row">Total Time</th>
+                  <td>15 minutes</td>
+                </tr>
+                <tr>
+                  <th scope="row">Preparation Time</th>
+                  <td>5 minutes</td>
+                </tr>
+                <tr>
+                  <th scope="row">Yield</th>
+                  <td>1 serving</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </section>
+        <div class="ingredients-and-steps">
+          <section>
+            <h3>Ingredients</h3>
+            <ul>
+              <li>
+                <input type="checkbox" id="oil">
+                <label for="oil">1 Tbsp. sesame oil</label>
+              </li>
+              <li>
+                <input type="checkbox" id="chicken">
+                <label for="chicken">4 oz. chicken, sliced into strips</label>
+              </li>
+              <li>
+                <input type="checkbox" id="garlic">
+                <label for="garlic">1 tsp. minced garlic</label>
+              </li>
+              <li>
+                <input type="checkbox" id="pepper">
+                <label for="pepper">&frac14; tsp. red pepper flakes</label>
+              </li>
+              <li>
+                <input type="checkbox" id="asparagus">
+                <label for="asparagus">2 cups asparagus, chopped</label>
+              </li>
+              <li>
+                <input type="checkbox" id="soy">
+                <label for="soy">1 tsp. soy sauce</label>
+              </li>
+              <li>
+                <input type="checkbox" id="honey">
+                <label for="honey">1 tsp. honey</label>
+              </li>
+              <li>
+                <input type="checkbox" id="seeds">
+                <label for="seeds">1 tsp. sesame seeds</label>
+              </li>
+              <li>
+                <input type="checkbox" id="orange">
+                <label for="orange">Juice and zest of 1 orange</label>
+              </li>
+              <li>
+                <input type="checkbox" id="rice">
+                <label for="rice">Rice (optional)</label>
+              </li>
+            </ul>
+          </section>
+          <section>
+            <h3>Steps</h3>
+            <ol>
+              <li>
+                Heat sesame oil in a large skillet. Saut&eacute; sliced chicken, garlic, and red pepper flakes for about 7 minutes. Add chopped asparagus and cook for an additional 3 minutes.
+              </li>
+              <li>
+                In a small bowl, whisk together soy sauce, honey, sesame seeds, and juice and zest of 1 orange. Add to skillet and cook for 1 minute. Serve plain or over rice of your choice.
+              </li>
+            </ol>
+          </section>
         </div>
-      </section>
-      <div class="ingredients-and-steps">
-        <section>
-          <h3>Ingredients</h3>
-          <ul>
-            <li>
-              <input type="checkbox" id="oil">
-              <label for="oil">1 Tbsp. sesame oil</label>
-            </li>
-            <li>
-              <input type="checkbox" id="chicken">
-              <label for="chicken">4 oz. chicken, sliced into strips</label>
-            </li>
-            <li>
-              <input type="checkbox" id="garlic">
-              <label for="garlic">1 tsp. minced garlic</label>
-            </li>
-            <li>
-              <input type="checkbox" id="pepper">
-              <label for="pepper">&frac14; tsp. red pepper flakes</label>
-            </li>
-            <li>
-              <input type="checkbox" id="asparagus">
-              <label for="asparagus">2 cups asparagus, chopped</label>
-            </li>
-            <li>
-              <input type="checkbox" id="soy">
-              <label for="soy">1 tsp. soy sauce</label>
-            </li>
-            <li>
-              <input type="checkbox" id="honey">
-              <label for="honey">1 tsp. honey</label>
-            </li>
-            <li>
-              <input type="checkbox" id="seeds">
-              <label for="seeds">1 tsp. sesame seeds</label>
-            </li>
-            <li>
-              <input type="checkbox" id="orange">
-              <label for="orange">Juice and zest of 1 orange</label>
-            </li>
-            <li>
-              <input type="checkbox" id="rice">
-              <label for="rice">Rice (optional)</label>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h3>Steps</h3>
-          <ol>
-            <li>
-              Heat sesame oil in a large skillet. Saut&eacute; sliced chicken, garlic, and red pepper flakes for about 7 minutes. Add chopped asparagus and cook for an additional 3 minutes.
-            </li>
-            <li>
-              In a small bowl, whisk together soy sauce, honey, sesame seeds, and juice and zest of 1 orange. Add to skillet and cook for 1 minute. Serve plain or over rice of your choice.
-            </li>
-          </ol>
-        </section>
-      </div>
+      </article>
     </main>
     <footer>
       <p>Recipe from <a class="recipe-credit" href="https://lilluna.com/orange-chicken-and-asparagus/#wprm-recipe-container-109651">Lil' Luna</a></p>
