--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Chicken Enchiladas Recipe</title>
+    <title>Chicken Enchiladas - Odin Recipes</title>
   </head>
   <body>
     <a class="skip-link" href="#chicken-enchiladas">Skip To Main Content</a>
