--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Granola & Yogurt Bowl Recipe</title>
+    <title>Granola & Yogurt Bowl - Odin Recipes</title>
   </head>
   <body>
     <a class="skip-link" href="#granola-and-yogurt-bowl">Skip To Main Content</a>
