Add skip link to home page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Odin Recipes</title>
   </head>
   <body>
+    <a class="skip-link" href="#find-a-recipe">Skip To Main Content</a>
     <header>
       <div class="header-logo">
         <div>
@@ -26,7 +27,7 @@
         </div>
       </div>
     </header>
-    <main>
+    <main id="find-a-recipe">
       <section class="recipes">
         <div>
           <h2>Find a Recipe</h2>
