Fix header logo's position

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <a class="skip-link" href="#find-a-recipe">Skip To Main Content</a>
-    <header>
-      <div class="header-logo">
-        <div>
-          <a href="index.html">Odin Recipes</a>
-        </div>
+    <div id="header-logo" class="header-logo">
+      <div>
+        <a href="index.html">Odin Recipes</a>
       </div>
+    </div>
+    <header aria-owns="header-logo">
       <div class="hero">
         <div class="hero-text">
           <h1>Welcome to <span>Odin Recipes</span></h1>
