Add div to footer

--- a/recipes/enchiladas.html
+++ b/recipes/enchiladas.html
@@ -141,10 +141,12 @@
       </article>
     </main>
     <footer>
-      <p>Recipe from <a class="recipe-credit" href="https://www.myfoodandfamily.com/recipe/122135/chicken-enchiladas-supreme">My Food and Family</a></p>
-      <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
-        <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
-      </a>
+      <div>
+        <p>Recipe from <a class="recipe-credit" href="https://www.myfoodandfamily.com/recipe/122135/chicken-enchiladas-supreme">My Food and Family</a></p>
+        <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
+          <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
+        </a>
+      </div>
     </footer>
     <script src="../js/recipes.js"></script>
   </body>
