--- a/recipes/orange-chicken.html
+++ b/recipes/orange-chicken.html
@@ -128,10 +128,12 @@
       </article>
     </main>
     <footer>
-      <p>Recipe from <a class="recipe-credit" href="https://lilluna.com/orange-chicken-and-asparagus/#wprm-recipe-container-109651">Lil' Luna</a></p>
-      <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
-        <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
-      </a>
+      <div>
+        <p>Recipe from <a class="recipe-credit" href="https://lilluna.com/orange-chicken-and-asparagus/#wprm-recipe-container-109651">Lil' Luna</a></p>
+        <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
+          <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
+        </a>
+      </div>
     </footer>
     <script src="../js/recipes.js"></script>
   </body>
