--- a/recipes/yogurt.html
+++ b/recipes/yogurt.html
@@ -130,10 +130,12 @@
       </article>
     </main>
     <footer>
-      <p>Recipe from <a class="recipe-credit" href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
-      <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
-        <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
-      </a>
+      <div>
+        <p>Recipe from <a class="recipe-credit" href="https://www.jaroflemons.com/granola-breakfast-bowl/">Jar of Lemons</a></p>
+        <a class="github-link" href="https://github.com/t4rantino/odin-recipes">
+          <img src="../img/github-icon.svg" alt="GitHub" height="32" width="32">
+        </a>
+      </div>
     </footer>
     <script src="../js/recipes.js"></script>
   </body>
