Replace recipe content

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
             <a href="recipes/yogurt.html">Go to recipe</a>
           </article>
           <article>
-            <img src="img/orange-chicken-asparagus.jpg" alt="Orange chicken and chopped asparagus served over white rice." height="250" width="250">
-            <h3>Orange Chicken & Asparagus</h3>
+            <img src="img/noodles.jpg" alt="Cooked noodles topped with green onions and red chili peppers in a skillet." height="250" width="250">
+            <h3>Sriracha Noodles</h3>
             <p>
-              Did I mention it's a one-pot meal?! Yep, one pot (as if this recipe couldn't get any better).
+              This dish is gluten-free, vegan, and healthier than your favorite instant noodle packets.
             </p>
-            <a href="recipes/orange-chicken.html">Go to recipe</a>
+            <a href="recipes/noodles.html">Go to recipe</a>
           </article>
         </div>
       </section>
