--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <a href="recipes/yogurt.html">Go to recipe</a>
           </article>
           <article>
-            <img src="img/noodles.jpg" alt="Cooked noodles topped with green onions and red chili peppers in a skillet." height="250" width="250">
+            <img src="img/noodles.jpg" alt="Cooked noodles topped with green onions and sweet bell peppers in a bowl with chopsticks." height="250" width="250">
             <h3>Sriracha Noodles</h3>
             <p>
               This dish is gluten-free, vegan, and healthier than your favorite instant noodle packets.
