Change paragraph text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img src="img/noodles.jpg" alt="Cooked noodles topped with green onions and sweet bell peppers in a bowl with chopsticks." height="250" width="250">
             <h3>Sriracha Noodles</h3>
             <p>
-              This dish is gluten-free, vegan, and healthier than your favorite instant noodle packets.
+              This dish is a wonderful, quick mid-week meal and healthier than your favorite instant noodle packets.
             </p>
             <a href="recipes/noodles.html">Go to recipe</a>
           </article>
